small fix to look better on mobile

--- a/pyfra/web/static/css/main.css
+++ b/pyfra/web/static/css/main.css
@@ -384,5 +384,8 @@
       flex-direction: row;
       width: 100%;
     }
+    .dashboard-list {
+      width: 100%;
+    }
   }
 }
